welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: not found: value vrai
if (vacation==vrai || weekday==false){
              ^