welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
var dormir:Boolean=false
if (vacation==vrai || weekday==false){
	dormir=true
}else {
	dormir=false 
}
return dormir ;
}